--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc -w",
+    "dev:main": "tsc -p tsconfig.json -w",
+    "dev:worker": "tsc -p tsconfig.botWorker.json -w",
+    "dev": "concurrently \"yarn:dev:main\" \"yarn:dev:worker\"",
     "test": "jest"
   },
   "repository": {
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.2",
+    "concurrently": "^8.2.2",
     "jest": "^29.6.1",
     "ts-jest": "^29.1.1"
   }
