--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:main": "tsc -p tsconfig.json -w",
-    "dev:worker": "tsc -p tsconfig.botWorker.json -w",
-    "dev": "concurrently \"yarn:dev:main\" \"yarn:dev:worker\"",
+    "dev": "webpack --watch",
     "test": "jest"
   },
   "repository": {
@@ -25,8 +23,10 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.2",
-    "concurrently": "^8.2.2",
     "jest": "^29.6.1",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.1",
+    "webpack": "^5.92.0",
+    "webpack-cli": "^5.1.4"
   }
 }
