--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "webpack --watch",
+        "dev": "webpack serve --static . --open",
+        "build": "webpack",
         "test": "jest"
     },
     "repository": {
@@ -27,7 +28,8 @@
         "ts-jest": "^29.2.3",
         "ts-loader": "^9.5.1",
         "webpack": "^5.93.0",
-        "webpack-cli": "^5.1.4"
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^5.1.0"
     },
     "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
